<resources>
    <string name="app_name">BikeShare</string>
    <string name="what_bike">What bike</string>
    <string name="where">Where</string>
    <string name="last_added">Last added</string>
    <string name="add_ride">Start ride</string>
    <string name="end_ride">End Ride</string>
    <string name="list_rides">List Rides</string>
    <string name="ride_enter_details">Please enter the following details to register a new bike:</string>
    <string name="take_picture_of_bike">Take picture of bike</string>
    <string name="bike_image">Bike image</string>
    <string name="title_activity_register_bike">RegisterBikeActivity</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="hourly_price">Hourly price (in dkk/hour)</string>
    <string name="register_bike">Register bike</string>
    <string name="check_bikes">Check bikes</string>
    <string name="bikes">Bikes</string>
    <string name="no_available_bikes">There are no available bikes, try again later</string>
    <string name="no_bikes">There are no bikes, try again later</string>
    <string name="ride_started">Ride started, go get \'em!</string>
    <string name="duration">Duration</string>
    <string name="total_cost">Total cost</string>
    <string name="end_ride_text">Do you want to end your ride? (Pricing will be recalculated upon ending)</string>
    <string name="title_activity_ride_history">RideHistoryActivity</string>
    <string name="no_rides">You currently have no rides</string>
    <string name="rides">Rides</string>
</resources>